--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://rhollins.github.io/content/"
+baseURL = "https://rafal.hollins.io/"
 languageCode = "en-us"
 title = "Rafal Hollins"
 theme = "m10c"
